# Ogma

./: .babelrc  .eslintrc.json  .gitignore  .gitmodules  README.md  base-config.js  electron-builder.json  generate-colors.js  package-lock.json  package.json  typedef.js
backend/: OgmaCore.js  start-backend.js  typedef.js
backend/helpers/: EnvironmentManager.js  Util.js
lib/: index.js  main.js
main/: Environment.js  IpcModule.js  MainApp.js  OgmaCore.js  SettingsManager.js  ThumbManager.js  Util.js  electron-app.js  electron-boot.js
main/helpers/: Environment.js  EnvironmentManager.js  SettingsManager.js  ThumbManager.js
ogma-backend/: .gitignore  .gitmodules  CMakeLists.txt  OgmaCore.js  README.md  Server.js  typedef.js
ogma-backend/db/: EnvironmentRepo.js
ogma-backend/environment/: Environment.js  EnvironmentManager.js  SinkTree.js
ogma-backend/fs/: FileManager.js  ThumbnailGeneratorProcess.js  ThumbnailManager.js
ogma-backend/helpers/: Config.js  Environment.js  EnvironmentManager.js  Logger.js  Server.js  SinkTree.js  ThumbnailManager.js  Util.js
ogma-backend/helpers/db/: EnvironmentRepo.js
ogma-backend/helpers/db/sql/: env-schema.sql  m-alpha-1.sql
ogma-backend/libs/spdlog/include/spdlog/sinks/: sink.h
ogma-backend/sql/: collection-schema.sql  thumbnail-schema.sql
ogma-backend/src/: Collection.cpp  Collection.h  Config.h  Database.cpp  Database.h  EnvironmentManager.cpp  EnvironmentManager.h  FileManager.cpp  FileManager.h  IpcModule.cpp  IpcModule.h  Library.cpp  Library.h  Server.cpp  Server.h  Settings.cpp  Settings.h  Util.cpp  Util.h  WebSocket.cpp  WebSocket.h  db-example.cpp  main.cpp
ogma-backend/src/tables/: tables.h  tables_collection.h  tables_thumbnail.h
ogma-frontend/: .gitignore  README.md  package-lock.json  package.json
ogma-frontend/public/: index.html  manifest.json
ogma-frontend/public/css/: index.css  react-tags.css
ogma-frontend/src/: index.js
ogma-frontend/src/react/: App.js
ogma-frontend/src/react/components/: Breadcrumbs.js  Checkbox.js  EnvIcon.js  ExternalLink.js  Icon.js  PropChecker.js  Sidebar.js  SinkViz.tsx  Tabs.js  TagComp.tsx  TagGroup.tsx
ogma-frontend/src/react/components/files/: FileEntry.js  FileEntryMenu.js  FileExplorer.js  FileList.js  FilePreview.js  FileStatusBar.js
ogma-frontend/src/react/containers/: AppDashboard.js  AppNotFound.js  AppSettings.js  Environment.js  TabBrowse.js  TabConfigure.js  TabManageSinks.tsx  TabManageTags.tsx  TabSearch.js
ogma-frontend/src/redux/: Action.ts  EntityMapReducer.ts  EnvBaseReducer.ts  FileMapReducer.js  OgmaAppReducer.ts  ReduxTypedef.ts  Selector.ts  SimpleReducer.ts  TabReducer.ts  TagEntityMapReducer.ts  TagIdArrayReducer.ts  TagMapReducer.ts
ogma-frontend/src/scss/: _bulma-custom.scss  _bulma-fixes.scss  _context-menu.scss  _dashboard.scss  _env.scss  _files.scss  _sinks.scss  _tags.scss  index.scss
ogma-frontend/src/util/: DataManager.ts  ErrorHandler.js  IconUtil.js  IpcModule.ts  ModalUtil.js  SharedUtil.js  SinkTree.js  Util.ts  backend-typedef.js  serviceWorker.js  typedef.ts
renderer/: react-app.jsx
renderer/components/: AppRoot.jsx
renderer/components/containers/: BrowseTag.jsx  Configure.jsx  EnvRoot.jsx  HomePage.jsx
renderer/components/helpers/: EnvIcon.jsx  EnvSelector.jsx  ExternalLink.jsx  FileEntry.jsx  Icon.jsx  SortPicker.jsx  Tabs.jsx  TextLoader.jsx
renderer/components/pages/: BrowseNTag.jsx  BrowseTag.jsx  Configure.jsx  EnvRoot.jsx  HomePage.jsx
renderer/components/util/: DataManager.js  EnvSelector.jsx  ErrorHandler.js  FileEntry.jsx  FileManager.js  GlobalState.js  Icon.jsx  IconTabs.jsx  SortPicker.jsx  ViewPicker.jsx
renderer/util/: DataManager.js  FileManager.js  GlobalState.js  Modal.js
shared/: ExactTrie.js  IpcModule.js  SharedUtil.js  SinkTree.js  Util.js  typedef.js
src/main/: index.js
src/renderer/: index.js
static/: index.css  index.html
static/css/: imports.css  main.css
static/scss/: _bulma-fixes.scss  _env-root.scss  _env-selector.scss  _misc.scss  _variables.scss  main.scss
